--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && node after-build-script.js", 
+    "build": "next build && node after-build-script.js",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.4",
     "gray-matter": "^4.0.3",
     "next": "13.4.4",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.3",
