--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -77,6 +77,8 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Static HTML export with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next export
+      - name: My Custom NodeJS After Build Script 
+        run: ${{ steps.detect-package-manager.outputs.runner }} node ./after-build-script.js
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
