Second attempt at fixing production build error. This time the public/feed folder is explicitly created before the RSS files are inserted in there.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /ignored
 /Notes-To-Self.md
 # RSS Feed files are pregenerated at build time, so no need to track them
-/public/feed/*
+/public/feed
 
 # Every folder named 'original' stores the largest version of the images
 # used for the website. For performance reasons, these possibly giant files are 
